[tool.poetry]
name = "empty"
version = "0.1.0"
description = ""
authors = ["DalmataCoder <123834373+SnowerCX@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
